# pre-commit_installer

./: CMakeLists.txt  README.md  config.h.in  version.rc.in
include/: execution.h  file_system.h  pre_commit.h
src/: execution.cpp  file_system.cpp  main.cpp  pre_commit.cpp
